Add entry cap and return button

--- a/server/views/entries.html
+++ b/server/views/entries.html
@@ -29,6 +29,9 @@
         </tbody>
       </table>
     </div>
+    <form action="/">
+      <input class="btn btn-general" type="submit" value="Add more submissions">
+    </form>
   </div>
 
 {% endblock %}
