--- a/server/views/submit.html
+++ b/server/views/submit.html
@@ -8,8 +8,8 @@
   <div class="container">
 
     <h1>{{ title }}</h1>
-    <p>Welcome to {{ title }}</p>
-    <form action="/" method="POST">
+    <p>Github Contest</p>
+    <form method="POST">
       <div class="form-group">
         <label for="githubName">Github Name</label>
         <input type="text" name="name" class="form-control" id="githubName" placeholder="name">
