--- a/server/views/submit.html
+++ b/server/views/submit.html
@@ -25,6 +25,7 @@
 
       <button type="submit" class="btn btn-default">Submit</button>
     </form>
+    <div class="alert alert-danger">{{ error}}</div>
 
   </div>
 
